# sem3

./: 3.cpp  ex2.cpp  ex_1.cpp  lesson1.cpp  q.cpp
SkipList-Lab/: d.cpp  lll.cpp  main_file.cpp  nrs.cpp  skiplist.cpp
bun/: DoubleDiceNew.txt  c.cpp  ex2.cpp  k.cpp  lesson1.cpp  lessons2.cpp  w.cpp
lab1/: the_base_of_sistem_of_classes.cpp
lab1/exercise_1/: Abstract_Dice.cpp  Abstract_Dice.h  Dice.cpp  Dice.h  ThreeDicePool.cpp  ThreeDicePool.h  classes_1.cpp  classes_1.h  expected_value.cpp  expected_value.h  main_1.cpp  main_11.cpp
lab1/exercise_2/: BonusDiceNew.txt  BonusDice_2.cpp  Dice.txt  Dice_2.cpp  PenaltyDice.txt  PenaltyDiceNew.txt  ThreeDicePool.txt  ThreeDicePoolNew.txt  base_classes.cpp  classes_2.cpp  lab1.ipynb  main_2.cpp
lab1/exercise_3/: DoubleDice.ipynb  DoubleDice.txt  main_3.cpp
lab2/: Grid.cpp  RAII.cpp  RAII_2.cpp  indexing.cpp
week.cpp/: 111.cpp
week01/trig_lib/: CMakeLists.txt  my_math.hpp
week01/trig_lib/include/: ans_handler.hpp  my_math.hpp
week01/trig_lib/src/: CMakeLists.txt  ans_handler.cpp  main.cpp  my_math.cpp
week02/task02/: utils.cpp
week02/task2/: CMakeLists.txt  main.cpp  my_image.ppm
week02/task2/include/: utils.h
week02/task2_3/: CMakeLists.txt  main.cpp
week02/task2_3/include/: vec3.h
week02/task2_3/src/: utils.cpp  vec3.cpp
week06/: 1.cpp  2.cpp
week07/: 1.cpp
week08/: 1.cpp  2.cpp
